--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ section {
   width: 40vh;
   height: 40vh;
   grid-template-columns: repeat(3, 1fr);  
+  grid-auto-rows: 1fr;
   box-shadow: 0px 0px 5px 0px #000000;
 }
 
@@ -69,7 +70,7 @@ section {
   align-items: center;
   color: #8b3b3b;
   font-family:sans-serif;
-  font-size: 5rem;
+  font-size: 4rem;
   width: 100%;
   height: 100%;
 }
