--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ header {
   color: #8b3b3b;
   font-family: 'Iceland';
   width: 100%;
-  height: 100%;
+  height: 15vh;
   text-align: center;
   box-shadow: 0px 0px 5px 0px #000000;
   position: relative;
@@ -35,17 +35,27 @@ h1 {
 
 section {
   display: flex;
-  justify-content: space-around;
+  justify-content:center;
+  gap: 5%;
   background-color: #aaaaaa;
-  min-height: 100vh;
+  height: 95vh;
   width: 100%;
+  margin-top: -5%;
 }
 
 .container {
   display: flex;
   flex-direction: column;
-  justify-content: start;
-  align-items: center;
+}
+
+.player {
+  background-color: #cfcfcf;
+  border: 2px solid #8b3b3b;
+  box-shadow: 0px 0px 10px 0px #8b3b3b inset;
+  border-radius: 10px;
+  width: 25vh;
+  height: 10vh;
+  margin-top: 15%;
 }
 
 #board {
