--- a/style.css
+++ b/style.css
@@ -50,12 +50,24 @@ section {
 
 .player {
   background-color: #cfcfcf;
+  color: #8b3b3b;
+  font-family: 'Iceland';
+  font-size: 2.5rem;
   border: 2px solid #8b3b3b;
   box-shadow: 0px 0px 10px 0px #8b3b3b inset;
   border-radius: 10px;
   width: 25vh;
   height: 10vh;
   margin-top: 15%;
+  padding: 1rem;
+  text-align: center;
+}
+
+.player > h3,
+.player > p {
+  font-size: 2rem;
+  margin: 0;
+  padding: 0;
 }
 
 #board {
